new content added

--- a/interpolation-fitting/interpolation-fitting.tex
+++ b/interpolation-fitting/interpolation-fitting.tex
@@ -35,6 +35,18 @@
 \frame{\titlepage}
 %---------------------
 \begin{frame}
+\frametitle{应用}
+\begin{figure}
+%\centering
+	\includegraphics[width=.4\linewidth]{quanhuang.png}
+\end{figure}
+\begin{figure}
+	\includegraphics[width=.4\linewidth]{weightinterp2.png}
+	\includegraphics[width=.4\linewidth]{weightinterp6.png}
+\end{figure}
+\end{frame}
+%---------------------
+\begin{frame}
 \frametitle{区别}
 \begin{figure}
 \centering
@@ -169,7 +181,7 @@ $f$即为给定点列的插值函数.
 %---------------------
 
 \begin{frame}
-\frametitle{差分（Divided Differences）}
+\frametitle{差商（Divided Differences）}
 
 \begin{flalign*}
 	\nabla y_i&=\frac{y_i-y_1}{x_i-x_1}, i=2,3,...,n &\\
